[gd_scene load_steps=7 format=3 uid="uid://b1lsmsi1uc7pe"]

[ext_resource type="Theme" uid="uid://cvalouqbcle6i" path="res://MediumYanoneFont.tres" id="1"]
[ext_resource type="Script" path="res://BaseUI.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cf14rpn23nhnb" path="res://CC_logo_small.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dgsj6by1n6he5" path="res://UI/back_yellow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dd6n8ahlts4ds" path="res://UI/back_white.png" id="5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laoid"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="BaseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_laoid")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Logo" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Logo"]
layout_mode = 2
texture = ExtResource("3")

[node name="Menu" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Campaigns" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Menu"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1")
alignment = 1

[node name="WorkshopContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Menu/Campaigns"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/WorkshopContainer"]
layout_mode = 2
text = "Campaign Workshop"

[node name="WorkshopCampaigns" type="PanelContainer" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/WorkshopContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/WorkshopContainer/WorkshopCampaigns"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/WorkshopContainer/WorkshopCampaigns/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddNew" type="Button" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/WorkshopContainer"]
layout_mode = 2
text = "+"

[node name="SavedLevelsContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Menu/Campaigns"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer"]
layout_mode = 2
text = "Saved Campaigns"

[node name="SavedLevelsContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Campaigns" type="ItemList" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer/SavedLevelsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer"]
layout_mode = 2
text = "LOAD"

[node name="CampaignTitle" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("1")

[node name="Label" type="Label" parent="VBoxContainer/CampaignTitle"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0

[node name="Return" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 117.0
offset_bottom = 119.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("4")

[node name="FileLoad" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="FileLoad"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="FileLoad"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -128.0
offset_right = 187.0
offset_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="FileLoad/PanelContainer"]
layout_mode = 2
theme = ExtResource("1")

[node name="Message" type="Label" parent="FileLoad/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Clipboard" type="Button" parent="FileLoad/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load From Clipboard"

[node name="Close" type="Button" parent="FileLoad/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="item_activated" from="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer/SavedLevelsContainer/Campaigns" to="." method="_on_Campaigns_item_activated"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer/SavedLevelsContainer/Campaigns" to="." method="_on_Campaigns_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu/Campaigns/SavedLevelsContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="FileLoad/PanelContainer/VBoxContainer/Clipboard" to="." method="_on_Clipboard_pressed"]
[connection signal="pressed" from="FileLoad/PanelContainer/VBoxContainer/Close" to="." method="_on_Close_pressed"]
